<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/indigo_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:textColor="@color/indigo"
        android:id="@+id/textView" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_first"
        android:id="@+id/button1"
        android:layout_margin="8dp"
        android:background="@color/indigo"
        android:textColor="@color/yellow"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_second"
        android:id="@+id/button2"
        android:layout_margin="8dp"
        android:background="@color/indigo"
        android:textColor="@color/yellow"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_third"
        android:id="@+id/button3"
        android:layout_margin="8dp"
        android:background="@color/indigo"
        android:textColor="@color/yellow"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_forth"
        android:id="@+id/button4"
        android:layout_margin="8dp"
        android:background="@color/indigo"
        android:textColor="@color/yellow"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_fifth"
        android:id="@+id/button5"
        android:layout_margin="8dp"
        android:background="@color/indigo"
        android:textColor="@color/yellow"
        android:layout_below="@id/button4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/app_capstone"
        android:id="@+id/button6"
        android:layout_margin="8dp"
        android:background="@color/red"
        android:textColor="@color/yellow"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
